Se ajusta el primer slide a los tamaños mobile, tablet y desktop

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -80,6 +80,9 @@ body {
   border-top: 2px solid #000000;
   border-bottom: 2px solid #000000;
 }
+.index .slideA__Content__box {
+  height: 300px;
+}
 .index .slideA__Content__box img {
   width: 400px;
   overflow: hidden;
