--- a/css/desktop.less
+++ b/css/desktop.less
@@ -19,6 +19,7 @@
 .index{
     .slideA__Content{
         &__box{
+            height: 300px;
             img{
                 width: 400px;
                 overflow: hidden;
