--- a/css/style.less
+++ b/css/style.less
@@ -94,7 +94,7 @@
           position: absolute;
          align-self: center;
           &__box{
-            height: 360px;
+            height: 100%;
             width: 100%;
             overflow: hidden;
             background-color: rgba(255,255,255,.65);
@@ -102,6 +102,18 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            &-txtsomos{
+              font-family: @font-family3;
+              font-size: 2.2rem;
+              text-align: center;
+              margin: 50px 50px;
+            }
+            &-txtservicio{
+              font-family: @font-family3;
+              font-size: 3.2rem;
+              text-align: center;
+            }
+           
             &-cta{
               background-color: @color-secondary;
               color: @color-white;
@@ -118,12 +130,7 @@
             .slideA_logo{
               margin: 0px 10px;
             }
-            p{
-              font-family: @font-family3;
-              font-size: 2.2rem;
-              text-align: center;
-              margin: 15px 50px;
-            }
+           
             .slideA_logoTermiz{
               width: 200px;
               margin: 15px 50px;
