--- a/css/tablet.less
+++ b/css/tablet.less
@@ -36,6 +36,7 @@
     .slideA__Content{
         width: 100%;
         &__box{
+            height: 400px !important;
             img{
                 max-width: 75%;
                 margin: 15px 34px;
@@ -44,6 +45,20 @@
                 // border: 1px solid red;
                 margin: 20px 10px 20px 20px !important; 
             }
+            &-txtsomos{
+                font-family: @font-family3;
+                font-size: 2.2rem;
+                text-align: center;
+                margin: 5px 50px;
+              }
+              &-txtservicio{
+                font-family: @font-family3;
+                font-size: 3.2rem;
+                text-align: center;
+              }
+              &-cta{
+                bottom: 28px;
+              }
             
         }
     }
