--- a/css/style.css
+++ b/css/style.css
@@ -181,7 +181,7 @@ body {
       align-self: center;
 }
 .index .carousel-inner .carousel-item .slideA__Content__box {
-  height: 360px;
+  height: 100%;
   width: 100%;
   overflow: hidden;
   background-color: rgba(255, 255, 255, 0.65);
@@ -199,6 +199,17 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
+.index .carousel-inner .carousel-item .slideA__Content__box-txtsomos {
+  font-family: 'Poppins', sans-serif;
+  font-size: 2.2rem;
+  text-align: center;
+  margin: 50px 50px;
+}
+.index .carousel-inner .carousel-item .slideA__Content__box-txtservicio {
+  font-family: 'Poppins', sans-serif;
+  font-size: 3.2rem;
+  text-align: center;
+}
 .index .carousel-inner .carousel-item .slideA__Content__box-cta {
   background-color: #831d22;
   color: #ffffff;
@@ -214,12 +225,6 @@ body {
 }
 .index .carousel-inner .carousel-item .slideA__Content__box .slideA_logo {
   margin: 0px 10px;
-}
-.index .carousel-inner .carousel-item .slideA__Content__box p {
-  font-family: 'Poppins', sans-serif;
-  font-size: 2.2rem;
-  text-align: center;
-  margin: 15px 50px;
 }
 .index .carousel-inner .carousel-item .slideA__Content__box .slideA_logoTermiz {
   width: 200px;
