--- a/css/style.less
+++ b/css/style.less
@@ -455,7 +455,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-around;
-        background-image: url(/images/experienciaFondo-mobile.jpg);
+        background-image: url(../images/experienciaFondo-mobile.jpg);
         background-position: center right;
         background-size: cover;
         width: 100vw;
