--- a/css/style.less
+++ b/css/style.less
@@ -571,7 +571,7 @@
           height: 100%;
           justify-content: center;
           align-items: center;
-          background-image: url(/images/fondo-degradado-mobile.png);
+          background-image: url(../images/fondo-degradado-mobile.png);
           background-position: center right;
           background-size: cover;
           width: 100vw;
