Se corrige la vista de los productos en Desktop

--- a/css/desktop.less
+++ b/css/desktop.less
@@ -15,6 +15,9 @@
     border-bottom: 2px solid @color-primary;
 
 }
+.carousel__marcas{
+    max-width: 1110px;
+}
   
 .index{
     .slideA__Content{
@@ -385,6 +388,17 @@
         margin: 40px auto;
     }
 }
+.productos{
+    &__brindar{
+        margin: 0 auto;
+        max-width: 1110px;
+    }
+    &__catalogo{
+        max-width: 1110px;
+        margin: 0 auto;
+    }
+}
+
 
 footer{
     .footer__servirle{
