--- a/css/desktop.css
+++ b/css/desktop.css
@@ -80,6 +80,9 @@ body {
   border-top: 2px solid #000000;
   border-bottom: 2px solid #000000;
 }
+.carousel__marcas {
+  max-width: 1110px;
+}
 .index .slideA__Content__box {
   height: 300px;
 }
@@ -482,6 +485,14 @@ body {
 .servicios__catalogo {
   max-width: 1110px;
   margin: 40px auto;
+}
+.productos__brindar {
+  margin: 0 auto;
+  max-width: 1110px;
+}
+.productos__catalogo {
+  max-width: 1110px;
+  margin: 0 auto;
 }
 footer .footer__servirle {
   -webkit-box-pack: center;
