Listos los hover en escritorio de la sección de servicios, falta los modales

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -98,10 +98,12 @@ block content
             .servicios__catalogo__items 
                 //- ITEM SERVICIOS
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg", alt="").img-fluid
-                    p DISEÑO DE CUARTO <br>DE MÁQUINAS
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal").btn.btn-primary.btn-modal.btn-servicios Más Información
-                    //- ****MODAL***
+                    figure 
+                        img(src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg", alt="").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 DISEÑO DE CUARTO <br>DE MÁQUINAS
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                        //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true")#maquinasModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
                             .modal-content
@@ -120,9 +122,11 @@ block content
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 //- ITEM SERVICIOS
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/instalacionCalderas500x458.jpg").img-fluid
-                    p INSTALACIÓN DE CALDERAS #[br]Y #[br]EQUIPOS AUXILIARES
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#hollinModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure 
+                        img(src="images/serviciosMobile/instalacionCalderas500x458.jpg").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 INSTALACIÓN DE CALDERAS #[br]Y #[br]EQUIPOS AUXILIARES
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#hollinModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true")#hollinModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
@@ -154,9 +158,11 @@ block content
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
             
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/MttoCalderas500x458.jpg", alt="").img-fluid
-                    p MANTENIMIENTO PREVENTIVO #[br]Y #[br]CORRECTIVO A CALDERAS
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#mttoModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure
+                        img(src="images/serviciosMobile/MttoCalderas500x458.jpg", alt="").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 MANTENIMIENTO PREVENTIVO #[br]Y #[br]CORRECTIVO A CALDERAS
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#mttoModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true")#mttoModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
@@ -207,9 +213,11 @@ block content
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/conversionCalderas500x458.jpg").img-fluid
-                    p CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#conversionModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure
+                        img(src="images/serviciosMobile/conversionCalderas500x458.jpg").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#conversionModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true")#conversionModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
@@ -242,9 +250,11 @@ block content
                                 .modal-footer.modal-content-footer
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/quemadores500x458.jpg").img-fluid
-                    p MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO A QUEMADORES
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure
+                        img(src="images/serviciosMobile/quemadores500x458.jpg").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO A QUEMADORES
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true")#quemadoresModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
@@ -272,9 +282,11 @@ block content
                                 .modal-footer.modal-content-footer
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/carburacionesTesto500x458.jpg").img-fluid
-                    p CARBURACIONES CON EQUIPO ANALIZADOR TESTO
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#testoModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure
+                        img(src="images/serviciosMobile/carburacionesTesto500x458.jpg").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3  CARBURACIONES CON EQUIPO ANALIZADOR TESTO
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#testoModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true")#testoModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
@@ -296,9 +308,11 @@ block content
                                 .modal-footer.modal-content-footer
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/cursos500x458.jpg", alt="").img-fluid
-                    p CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#cursosModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure
+                        img(src="images/serviciosMobile/cursos500x458.jpg", alt="").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#cursosModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true")#cursosModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
@@ -320,9 +334,11 @@ block content
                                 .modal-footer.modal-content-footer
                                     button(type="button" data-bs-dismiss="modal").btn.btn-secondary Cerrar
                 .servicios__catalogo__items-item
-                    img(src="images/serviciosMobile/serviciosAdicionales500x458.jpg").img-fluid
-                    p SERVICIOS ADICIONALES
-                    button(type="button" data-bs-toggle="modal" data-bs-target="#adicionalesModal").btn.btn-primary.btn-modal.btn-servicios Más Información
+                    figure
+                        img(src="images/serviciosMobile/serviciosAdicionales500x458.jpg").img-fluid
+                        .servicios__catalogo__items-item-capa.capa
+                            h3 SERVICIOS ADICIONALES
+                            button(type="button" data-bs-toggle="modal" data-bs-target="#adicionalesModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true")#adicionalesModal
                         .modal-dialog.modal-dialog-centered.modal-xl.modal-xl
