--- a/css/desktop.css
+++ b/css/desktop.css
@@ -486,6 +486,66 @@ body {
   max-width: 1110px;
   margin: 40px auto;
 }
+.servicios__catalogo__items-item {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: 100%;
+  border: none;
+  margin: 15px 0;
+}
+.servicios__catalogo__items-item figure {
+  position: relative;
+  overflow: hidden;
+  border-radius: 6px;
+  -webkit-box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+          box-shadow: 0px 15px 25px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
+}
+.servicios__catalogo__items-item figure img {
+  width: 100%;
+  height: 100%;
+  -webkit-transition: all 500ms ease-out;
+  transition: all 500ms ease-out;
+  max-width: 100%;
+  margin: 0;
+}
+figure:hover > .servicios__catalogo__items-item-capa {
+  opacity: 1;
+  visibility: visible;
+}
+.servicios__catalogo__items-item figure:hover > img {
+  -webkit-transform: scale(1.3);
+          transform: scale(1.3);
+}
+.servicios__catalogo__items-item-capa {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 103, 123, 0.9);
+  -webkit-transition: all 500ms ease-out;
+  transition: all 500ms ease-out;
+  opacity: 0;
+  visibility: hidden;
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.servicios__catalogo__items-item-capa h3 {
+  color: #fff;
+  -webkit-transition: all 500ms ease-out;
+  transition: all 500ms ease-out;
+  font-size: 3rem;
+}
 .productos__brindar {
   margin: 0 auto;
   max-width: 1110px;
