--- a/css/desktop.less
+++ b/css/desktop.less
@@ -386,6 +386,65 @@
     &__catalogo{
         max-width: 1110px;
         margin: 40px auto;
+        &__items{
+            &-item{
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100%;
+                border: none;
+                margin:15px 0;
+                figure{
+                    position: relative;
+                    overflow: hidden;
+                    border-radius: 6px;
+                    box-shadow: 0px 15px 25px rgba(0,0,0,0.50);
+                    cursor: pointer;
+                    img{
+                        width: 100%;
+                        height: 100%;
+                        transition: all 500ms ease-out;
+                        max-width: 100%;
+                        margin: 0;
+
+                    }
+                }
+                figure:hover > &-capa{
+                    opacity : 1;
+                    visibility: visible;
+                }
+                figure:hover > &-capa h3{
+                   
+                }
+                figure:hover > img{
+                    transform: scale(1.3);
+                }
+                &-capa{
+                    position: absolute;
+                    top: 0;
+                    width: 100%;
+                    height: 100%;
+                    background: rgba(0,103,123,0.9);
+                    transition: all 500ms ease-out;
+                    opacity : 0;
+                    visibility: hidden;
+                    text-align: center;
+                    justify-content: center;
+                    h3{
+                        color: #fff;
+                        
+                        transition: all 500ms ease-out;
+                      
+                        font-size: 3rem;
+                        
+
+                    }
+
+                }
+
+            }
+        }
     }
 }
 .productos{
