--- a/css/style.css
+++ b/css/style.css
@@ -969,30 +969,55 @@ body {
   display: grid;
 }
 .servicios__catalogo__items-item {
-  margin: 20px 10px;
   border: 2px solid #C4C4C4;
+  margin: 20px 10px;
   display: -ms-grid;
   display: grid;
   border-radius: 10px;
+  padding: 20px;
 }
-.servicios__catalogo__items-item img {
-  max-width: 90%;
-  margin: 20px;
-  border-radius: 10px;
+.servicios__catalogo__items-item figure {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
-.servicios__catalogo__items-item p {
+.servicios__catalogo__items-item figure img {
+  width: 100%;
+  margin: 0 auto;
+}
+.servicios__catalogo__items-item-capa {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 162px;
+}
+.servicios__catalogo__items-item-capa h3 {
   text-align: center;
   font-weight: 600;
   margin: 10px 30px;
   font-size: 2rem;
 }
-.servicios__catalogo__items-item button {
+.servicios__catalogo__items-item-capa button {
   background-color: #072A49;
   color: #ffffff;
   font-size: 1.4rem;
   border: none;
   height: 40px;
-  margin: 10px 70px;
+  margin: 10px auto;
   border-radius: 10px;
   width: 140px;
   -ms-grid-column-align: center;
@@ -1017,11 +1042,6 @@ body {
           align-items: flex-start;
   margin: 10px;
   border-bottom: 4px solid #831d22;
-}
-.servicios__catalogo__items-item .modal-content-header img {
-  width: 30px;
-  height: 30px;
-  margin-top: 20px;
 }
 .servicios__catalogo__items-item .modal-content-header p {
   margin: 10px auto;
