--- a/css/style.less
+++ b/css/style.less
@@ -712,31 +712,50 @@
       &__items{
         display: grid;
         &-item{
-          margin: 20px 10px;
           border: 2px solid @color-gray;
+          margin: 20px 10px;
           display: grid;
           border-radius: 10px;
-          img{
-            max-width: 90%;
-            margin: 20px;
-            border-radius: 10px;
+          padding: 20px;
+
+          figure{
+            display: flex;
+            flex-direction: column;
+
+            img{
+              width:100%;
+              margin: 0 auto;
+            }
           }
-          p{
-            text-align: center;
-            font-weight: @font-semibold;
-            margin: 10px 30px;
-            font-size: 2rem;
-          }
-          button{
-            background-color: @color-blue;
-            color: @color-white;
-            font-size: @size-md;
-            border: none;
-            height: 40px;
-            margin: 10px 70px;
-            border-radius: 10px;
-            width: 140px;
-            justify-self: center;
+         
+          &-capa{
+            display: flex;
+            flex-direction:column;
+            align-items: center;
+            justify-content: space-between;
+            height:162px;
+
+            
+            h3{
+              text-align: center;
+              font-weight: @font-semibold;
+              margin: 10px 30px;
+              font-size: 2rem;
+            }
+            button{
+              background-color: @color-blue;
+              color: @color-white;
+              font-size: @size-md;
+              border: none;
+              height: 40px;
+              margin: 10px auto;
+              border-radius: 10px;
+              width: 140px;
+              justify-self: center;
+            }
+          
+            
+            
           }
           .modal{
             &-content{
@@ -759,11 +778,11 @@
                 align-items: flex-start;
                 margin: 10px;
                 border-bottom: 4px solid @color-secondary;
-                img{
-                  width: 30px;
-                  height: 30px;
-                  margin-top: 20px;
-                }
+                // img{
+                //   width: 30px;
+                //   height: 30px;
+                //   margin-top: 20px;
+                // }
                 p{
                   margin: 10px auto;
                   text-align: center;
@@ -827,9 +846,8 @@
               }
             }
           }
-          
-          
         }
+      
 
       }
     }
