--- a/css/style.less
+++ b/css/style.less
@@ -820,6 +820,8 @@
                   p{
                     font-weight: @font-regular;
                     text-align: justify;
+                    font-size: 1.6rem;
+                    padding: 10px;
 
                   }
                   ul{
