--- a/css/desktop.less
+++ b/css/desktop.less
@@ -1,5 +1,48 @@
 @import "./globals.less";
 @import "./variables.less";
+.modal-content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    &-close{
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+    }
+    &-header{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
+    &-body{
+        display: flex;
+        flex-direction: row !important;
+        padding: 50px;
+        &-sidebar{
+            display: flex;
+            flex-direction: colum;
+            justify-content: center;
+            align-items: center;
+            max-width: 25%;
+        }
+        &-content{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            max-width: 60%;
+            margin: 0 auto;
+        }
+    }
+    &-footer{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 90%;
+    }
+}
 .ir-arriba{
     display: none;
 }
