--- a/css/style.less
+++ b/css/style.less
@@ -40,7 +40,7 @@
     }
   }
   .modal-footer{
-    justify-content: center !important;
+    justify-content: center;
   }
   .carousel__marcas{
     width: 90%;
@@ -844,7 +844,10 @@
                 }
               }
               &-footer{
-                justify-content: center !important;
+               justify-content: center;
+               button{
+                width: 100px;
+               }
               }
             }
           }
