--- a/css/desktop.css
+++ b/css/desktop.css
@@ -128,6 +128,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
   max-width: 25%;
+  border-right: 2px solid #C4C4C4;
+  padding-right: 30px;
+  height: 100vh;
 }
 .modal-content-body-content {
   display: -webkit-box;
@@ -146,13 +149,20 @@ body {
   max-width: 60%;
   margin: 0 auto;
 }
+.modal-content-body-content p {
+  font-size: 1.4rem;
+  padding: 0;
+}
+.modal-content-body-content ul li p {
+  font-size: 1.3rem !important;
+}
 .modal-content-footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: end !important;
+      -ms-flex-pack: end !important;
+          justify-content: flex-end !important;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -426,9 +436,8 @@ body {
 }
 .index__contactenos p {
   font-size: 2.3rem;
-  margin-right: 200px;
+  margin-left: 40px;
   width: 100%;
-  margin: 0 20px;
 }
 .index__area {
   max-width: 1110px;
@@ -637,6 +646,17 @@ figure:hover > .servicios__catalogo__items-item-capa {
   transition: all 500ms ease-out;
   font-size: 3rem;
 }
+.productos .section__header-content p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .productos__brindar {
   margin: 0 auto;
   max-width: 1110px;
@@ -644,6 +664,50 @@ figure:hover > .servicios__catalogo__items-item-capa {
 .productos__catalogo {
   max-width: 1110px;
   margin: 0 auto;
+}
+.calderas .section__header-content p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.calderas__carousel {
+  margin: 10px auto;
+  max-width: 1110px;
+}
+.contacto .section__header-content p {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.contacto__txt {
+  margin: 30px auto;
+  max-width: 1110px;
+}
+.contacto__txt p {
+  margin: 0;
+}
+.contacto__box {
+  margin: 0 auto;
+  max-width: 1110px;
+}
+.contacto__convencer {
+  margin: 40px auto;
+  max-width: 1110px;
+}
+.contacto__convencer picture {
+  height: 73px;
 }
 footer .footer__servirle {
   -webkit-box-pack: center;
