--- a/css/tablet.less
+++ b/css/tablet.less
@@ -85,6 +85,7 @@
             justify-content: flex-start;
             height: 100%;
             width: 100%;
+            padding-left: 20px;
         }
 
         
