--- a/css/style.less
+++ b/css/style.less
@@ -92,7 +92,9 @@
         .slideA__Content{
           display: flex;
           position: absolute;
-         align-self: center;
+          align-self: center;
+          justify-content: center;
+          height: 87.5%;
           &__box{
             height: 100%;
             width: 100%;
@@ -103,15 +105,22 @@
             justify-content: center;
             align-items: center;
             &-txtsomos{
-              font-family: @font-family3;
               font-size: 2.2rem;
               text-align: center;
-              margin: 50px 50px;
+              margin: 0px auto;
+              position: relative;
+              bottom: 18px;
+              padding: 0 39px;
+              font-family: @font-family3;
             }
             &-txtservicio{
-              font-family: @font-family3;
-              font-size: 3.2rem;
+              font-family: @font-family1;
+              font-size: 2.6rem;
               text-align: center;
+              font-weight: 600;
+              margin-bottom: 0px;
+              position: relative;
+              bottom: 21px;
             }
            
             &-cta{
@@ -129,6 +138,8 @@
             }
             .slideA_logo{
               margin: 0px 10px;
+              position: relative;
+              bottom: 30px;;
             }
            
             .slideA_logoTermiz{
