Se hace el cambio #5 del archivo mobile - botones la servicios, productos y calderas

--- a/css/style.less
+++ b/css/style.less
@@ -566,6 +566,9 @@
                   color: @color-white;
                   font-size: @size-md;
                   text-align: center;
+                  background-color: #831d22;
+                  padding: 2px 10px;
+                  border-radius: 4px;
                 }
               }
 
