--- a/css/style.css
+++ b/css/style.css
@@ -805,6 +805,9 @@ body {
   color: #ffffff;
   font-size: 1.4rem;
   text-align: center;
+  background-color: #831d22;
+  padding: 2px 10px;
+  border-radius: 4px;
 }
 .index__area__elegirnos {
   position: relative;
