--- a/css/style.less
+++ b/css/style.less
@@ -69,6 +69,9 @@
   .carousel__tablet{
     display: none;
   }
+  .carousel__desktop{
+    display: none;
+  }
   .marcas__propiedad p{
     text-align: center;
     font-size: @size-lg;
