--- a/css/style.less
+++ b/css/style.less
@@ -17,6 +17,13 @@
 	right:20px;
   z-index: 1;
 }
+.carousel__marcasTxt{
+  text-align: center;
+  margin: 0 auto;
+  font-size: 3.3rem;
+  color: #7f8c8d;
+  font-family: @font-family3;
+}
 .carousel-indicators {
   margin-bottom: 1.5rem !important;
 }
@@ -27,7 +34,7 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    padding: 10px 5px;
+    padding: 10px 30px;
     font-size: @size-sm;
     font-weight: @font-regular;
     color: @color-text;
@@ -597,9 +604,7 @@
           position: relative;
           margin-bottom: 0;
           background-attachment: fixed;
-          padding: 7%;
-
-          padding: 10px;
+          padding: 25px;
           &-item{
             display: flex;
             align-items: flex-start;
