--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -2,27 +2,35 @@ p.title MARCAS
 .carousel.slide.carousel__mobile(data-bs-ride="carousel")#carouselExampleControls
     .carousel-inner
         .carousel-item.active
-            img(src="images/Marcas/ALLANSON.jpg").d-block.w-100
+            //img(src="images/Marcas/ALLANSON.jpg").d-block.w-100
+            h2.carousel__marcasTxt ALLANSON
         .carousel-item
-            img(src="images/Marcas/ASCO.jpg").d-block.w-100
+            //img(src="images/Marcas/ASCO.jpg").d-block.w-100
+            h2.carousel__marcasTxt ASCO
         .carousel-item
-            img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100
+            //img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100
+            h2.carousel__marcasTxt CLEAVER BROOKS
         .carousel-item
-            img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100
+            //img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100
+            h2.carousel__marcasTxt ECOFLAM
         .carousel-item
-            img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100
+            //img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100
+            h2.carousel__marcasTxt HONEYWELL
         .carousel-item
-            img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100
+            //img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100
+            h2.carousel__marcasTxt METRON
         .carousel-item
-            img(src="images/Marcas/METRON.jpg").d-block.w-100
+            //img(src="images/Marcas/METRON.jpg").d-block.w-100
+            h2.carousel__marcasTxt PICSA
         .carousel-item
-            img(src="images/Marcas/PICSA.jpg").d-block.w-100
+            //img(src="images/Marcas/PICSA.jpg").d-block.w-100
+            h2.carousel__marcasTxt VAYREMEX
         .carousel-item
-            img(src="images/Marcas/SENTINEL.jpg").d-block.w-100
+            //img(src="images/Marcas/SENTINEL.jpg").d-block.w-100
+            h2.carousel__marcasTxt SENTINEL
         .carousel-item
-            img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100
-        .carousel-item
-            img(src="images/Marcas/VIKING-PUMP.jpg").d-block.w-100
+            //img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100
+            h2.carousel__marcasTxt VIKING PUMP
         button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
@@ -64,4 +72,4 @@ p.title MARCAS
             span(aria-hidden="true").carousel-control-next-icon
             span.visually-hidden Next
 .marcas__propiedad 
-    p *Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, #[br] #[strong SERVICIO TÉCNICO A CALDERAS] los utiliza con fines informativos e ilustrativos.
+    //- p *Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, #[br] #[strong SERVICIO TÉCNICO A CALDERAS] los utiliza con fines informativos e ilustrativos.
