Listos los camios de servicios mobile

--- a/pug/servicios.pug
+++ b/pug/servicios.pug
@@ -111,7 +111,7 @@ block content
                                     a(data-bs-dismiss="modal" aria-label="Close")
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
-                                    p.modal-title#exampleModalLabel DISEÑO DE CUARTO <br>DE MÁQUINAS
+                                    p.modal-title#exampleModalLabel DISEÑO DE CUARTO DE MÁQUINAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images 
@@ -125,7 +125,7 @@ block content
                     figure 
                         img(src="images/serviciosMobile/instalacionCalderas500x458.jpg").img-fluid
                         .servicios__catalogo__items-item-capa.capa
-                            h3 INSTALACIÓN DE CALDERAS #[br]Y #[br]EQUIPOS AUXILIARES
+                            h3 INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES
                             button(type="button" data-bs-toggle="modal" data-bs-target="#hollinModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true")#hollinModal
@@ -136,7 +136,7 @@ block content
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel INSTALACIÓN DE CALDERAS #[br]Y #[br]EQUIPOS AUXILIARES
+                                    p.modal-title#exampleModalLabel INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images 
@@ -161,7 +161,7 @@ block content
                     figure
                         img(src="images/serviciosMobile/MttoCalderas500x458.jpg", alt="").img-fluid
                         .servicios__catalogo__items-item-capa.capa
-                            h3 MANTENIMIENTO PREVENTIVO #[br]Y #[br]CORRECTIVO A CALDERAS
+                            h3 MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS
                             button(type="button" data-bs-toggle="modal" data-bs-target="#mttoModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true")#mttoModal
@@ -171,7 +171,7 @@ block content
                                     a(data-bs-dismiss="modal" aria-label="Close")
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
-                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO #[br]Y #[br]CORRECTIVO A CALDERAS
+                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                         .modal-content-body-sidebar__images
@@ -216,7 +216,7 @@ block content
                     figure
                         img(src="images/serviciosMobile/conversionCalderas500x458.jpg").img-fluid
                         .servicios__catalogo__items-item-capa.capa
-                            h3 CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS
+                            h3 CONVERSIÓN DE COMBUSTIBLES A CALDERAS
                             button(type="button" data-bs-toggle="modal" data-bs-target="#conversionModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true")#conversionModal
@@ -253,7 +253,7 @@ block content
                     figure
                         img(src="images/serviciosMobile/quemadores500x458.jpg").img-fluid
                         .servicios__catalogo__items-item-capa.capa
-                            h3 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO A QUEMADORES
+                            h3 MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES
                             button(type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true")#quemadoresModal
@@ -264,7 +264,7 @@ block content
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO A QUEMADORES
+                                    p.modal-title#exampleModalLabel MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                     
@@ -311,7 +311,7 @@ block content
                     figure
                         img(src="images/serviciosMobile/cursos500x458.jpg", alt="").img-fluid
                         .servicios__catalogo__items-item-capa.capa
-                            h3 CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS
+                            h3 CURSO BÁSICO DE OPERACIÓN A CALDERAS
                             button(type="button" data-bs-toggle="modal" data-bs-target="#cursosModal").btn.btn-primary.btn-modal.btn-servicios Más Información
                     //- ****MODAL***
                     .modal.fade(tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true")#cursosModal
@@ -322,7 +322,7 @@ block content
                                         img(src="images/Iconos/circle-xmark-solid.svg")
                                 .modal-content-header
                                     
-                                    p.modal-title#exampleModalLabel CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS
+                                    p.modal-title#exampleModalLabel CURSO BÁSICO DE OPERACIÓN A CALDERAS
                                 .modal-content-body
                                     .modal-content-body-sidebar 
                                    
