--- a/css/style.css
+++ b/css/style.css
@@ -1021,15 +1021,15 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   height: 162px;
 }
 .servicios__catalogo__items-item-capa h3 {
   text-align: center;
   font-weight: 600;
-  margin: 10px 30px;
+  margin: 20px auto;
   font-size: 2rem;
 }
 .servicios__catalogo__items-item-capa button {
@@ -1097,17 +1097,21 @@ body {
   padding: 10px;
 }
 .servicios__catalogo__items-item .modal-content-body-content ul {
-  margin: 20px 40px;
+  margin: 5px 20px;
 }
 .servicios__catalogo__items-item .modal-content-body-content ul .vineta {
   list-style: disc;
+  margin-left: 30px;
+}
+.servicios__catalogo__items-item .modal-content-body-content ul .vineta p {
+  font-size: 1.2rem;
 }
 .servicios__catalogo__items-item .modal-content-body-content ul li {
   list-style: none;
 }
 .servicios__catalogo__items-item .modal-content-body-content ul li p {
   text-align: left;
-  font-size: 2rem;
+  font-size: 1.4rem;
   margin: 5px;
 }
 .servicios__catalogo__items-item .modal-content-footer {
