--- a/css/style.less
+++ b/css/style.less
@@ -753,14 +753,14 @@
             display: flex;
             flex-direction:column;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             height:162px;
 
             
             h3{
               text-align: center;
               font-weight: @font-semibold;
-              margin: 10px 30px;
+              margin: 20px auto;
               font-size: 2rem;
             }
             button{
@@ -846,15 +846,20 @@
 
                   }
                   ul{
-                    margin: 20px 40px;
+                    margin: 5px 20px;
                     .vineta{
                       list-style: disc;
+                      margin-left: 30px;
+                      p{
+                        font-size: 1.2rem;
+
+                      }
                     }
                     li{
                       list-style: none;
                       p{
                         text-align: left;
-                        font-size: @size-xl;
+                        font-size: 1.4rem;
                         margin: 5px;
 
 
