Listos los cambios mobile, se quitaron los logos completamente

--- a/pug/calderas.pug
+++ b/pug/calderas.pug
@@ -11,7 +11,7 @@ block content
         p.title VENTA DE CALDERAS
         .calderas__venta 
             p Venta de calderas industriales de la marca:
-            img(src="images/Marcas/Cleaver.png", alt="Logo de CleaverBrooks")
+            h2.carousel__marcasTxt CLEAVER BROOKS
         .calderas__carousel
             .carousel.slide(data-bs-ride="carousel")#carouselExampleIndicators
                 .carousel-indicators 
